2001-01-22  Lars Wirzenius  <liw@iki.fi>

	* gw/wap-appl.c: Fixed memory leak (a Mutex was not being
	destroyed) and related whitespace usage and made the Mutex static.
	Also removed a spurious editorial comment with an "I" referring
	to me, even though I didn't write it.
	
	* gw/wapbox.c: Made some global-but-static variables with
	configuration information local to the function that reads and
	processes the config.
	
2001-01-22  Richard Braakman  <dark@wapit.com>

        * gwlib/gwthread-pthread.c: In function gwthread_create_real(),
        applied Nick Clarey's patch to fix signal handling and restyled.
        Then fixed signal handling some more by using pthread_sigmask
        instead of sigprocmask, and SIG_BLOCK instead of SIG_SETMASK.
        This way we won't interfere with signals used by the pthread
	implementation.

	* gw/bearerbox.c, gw/smsbox.c, gw/wapbox.c: Updated comment in
	signal_handler() to reflect the new situation, and made them all
	use gwthread_shouldhandlesignal().

2001-01-22  Lars Wirzenius  <liw@iki.fi>

	* gw/wapbox.c: Converted to use new config file module in gwlib.

2001-01-22  Lars Wirzenius  <liw@iki.fi>

	* gwlib/accesslog.c: Made the output buffer be allocated via
	dynamic memory to avoid overflowing the stack with large local
	variables.
	
	* gwlib/log.c: Made output buffer smaller, again because of stack
	limitations. The new limit is one kilobyte, but since it is used
	only for certain parts of the output (the prefix with dates etc,
	and the format string), it should be plenty.

2001-01-21  Lars Wirzenius  <liw@iki.fi>

	* doc/userguide/userguide.xml: Changed SMPP version to 3.4.
	
	* gw/smsc_smpp.h: Removed. I thought I had removed it earlier
	already.
	
	* test/fakewap.c: Fixed memory leaks.

2001-01-19  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: Added function set_charset to fix bug with 
	the character set read from the http-headers.

2001-01-18  Lars Wirzenius  <liw@iki.fi>
